tdf#97517 DOCX VML shape import: fix missing vertical mirroring

The MirroredX property is set (in the CustomShapeGeometry property), but
it is not supported for the LineShape by UNO, so we have to make the
mirroring during importing.

Change-Id: I65a1f9a115a003c056ae31f4bc217206a0e6dcd8